# llm-based-gmail-organizer

./: .gitignore  README.md  pyproject.toml
prompts/: categorize_email_prompt.md
src/: category_optimizer.py  data_review_app.py  dataset_builder.py  gmail_client.py  llm_client.py  organizer.py  remove_signature.py
